chore: fix content reading